--- a/fire-risk-app/static/css/style.css
+++ b/fire-risk-app/static/css/style.css
@@ -114,7 +114,16 @@ body {
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             padding: 15px;
         }
-
+        
+        .waiting-box {
+            width: 100%;
+            height: 580px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid #ccc;
+            background-color: #fff;
+        }
         .map-box h2 {
             text-align: center;
             font-size: 1.4em;
